[package]
name = "sqlx_example"
version = "0.1.0"
edition = "2021"
include = ["/src"]

[dependencies]
aurora-dsql-sqlx-connector = { version = "0.1", features = ["pool", "occ"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }


[[bin]]
name = "example_preferred"
path = "src/example_preferred.rs"

[[bin]]
name = "example_no_connection_pool"
path = "src/alternatives/no_connection_pool/example_no_connection_pool.rs"

[[test]]
name = "example_preferred_test"
path = "tests/example_preferred_test.rs"

[[test]]
name = "example_no_connection_pool_test"
path = "tests/alternatives/no_connection_pool/example_no_connection_pool_test.rs"
